AuthServer: Refresh Token/ Logout/ Delete User - implemented